# MiddleString

./: CMakeLists.txt  itc_6_maxCharWord.cpp  main.cpp  middle_str.h
